--- a/pacman.conf
+++ b/pacman.conf
@@ -42,7 +42,7 @@ ParallelDownloads = 50
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
 #SigLevel    = Required DatabaseOptional
-SigLevel    = Optional
+SigLevel    = TrustAll
 LocalFileSigLevel = Optional
 #RemoteFileSigLevel = Required
 
@@ -102,3 +102,6 @@ Include = /etc/pacman.d/mirrorlist
 
 [chaotic-aur]
 Server = https://geo-mirror.chaotic.cx/$repo/$arch
+
+[linux-surface]
+Server = https://pkg.surfacelinux.com/arch/
