--- a/pacman.conf
+++ b/pacman.conf
@@ -102,6 +102,7 @@ Include = /etc/pacman.d/mirrorlist
 
 [chaotic-aur]
 Server = https://geo-mirror.chaotic.cx/$repo/$arch
+SigLevel = Never
 
 [linux-surface]
 Server = https://pkg.surfacelinux.com/arch/
