--- a/pacman.conf
+++ b/pacman.conf
@@ -42,7 +42,7 @@ ParallelDownloads = 50
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
 #SigLevel    = Required DatabaseOptional
-SigLevel    = TrustAll
+SigLevel    = Never
 LocalFileSigLevel = Optional
 #RemoteFileSigLevel = Required
 
