--- a/pacman.conf
+++ b/pacman.conf
@@ -101,7 +101,7 @@ Include = /etc/pacman.d/mirrorlist
 #Server = file:///home/custompkgs
 
 [chaotic-aur]
-Server = https://geo-mirror.chaotic.cx/$repo/$arch
+Server = https://us-ut-mirror.chaotic.cx/$repo/$arch
 SigLevel = Never
 
 [linux-surface]
